# FedSSR

./: .gitignore  README.md  batch.sh  batch_runner.py  logger.py  monitor_gpu.py  plot.py  process_logs.py  pyproject.toml  run_parallel_test.sh  test_parallel.py
conf/: ascent.toml  cifar100.toml  default.toml  full_mean_std.toml  lie.toml  minmax.toml  minsum.toml  noattack.toml  oursneo.toml  oursneo50.toml  signscale.toml
conf/store/: ascent.toml  fedavg.toml  krum.toml  median.toml  minmax.toml  mozi25.toml  mozi33.toml  mozi75.toml  noattack.toml  ours.toml
plot/: mclient_resnet_acc5_comparison.py
src/: main.py
src/boomerang/: attack.py  experiment.py
src/boomerang/training/: __init__.py  trainer.py
src/boomerang/utils/: timer.py
src/mozi/: aggregation.py  attack.py  exp.py  experiment.py
src/mozi/experiment/: __init__.py  base.py  bsrfl.py  classic.py  fedssr.py  mozi.py  regression.py  rfed.py  rflpa.py  score.py
src/mozi/training/: __init__.py  parallel_trainer.py  trainer.py
src/mozi/training/dataset/: cifar.py  cinic.py  factory.py  imagenette.py  tiny_imagenet.py
src/mozi/training/datasplitter/: base.py  dirichlet.py  factory.py  iid.py
src/mozi/training/model/: factory.py
src/mozi/utils/: ops.py
